# cpp-sdk

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: package.yml  windows-x64.yml  windows.yml
examples/: CMakeLists.txt  app.cpp
include/: base64.hpp  error.hpp  ntp_client.hpp  system.hpp  tsar.hpp  user.hpp
include/ntp/: client.hpp  error.hpp
src/: CMakeLists.txt  error.cpp  ntp_client.cpp  system.cpp  tsar.cpp  user.cpp  user.hpp
src/ntp/: client.cpp  error.cpp
